Changed the link

--- a/index.html
+++ b/index.html
@@ -227,6 +227,6 @@
   </div>
 </div>
 <script src="src/script.js"></script>
-<a href="https://github.com/Alcesma/Weather" id="open-source">Open-source</a>
+<a href="https://github.com/Alcesma/Weather-main" id="open-source">Open-source</a>
   </body>
 </html>
